--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -548,6 +548,7 @@ span:nth-of-type(27) {
     font-size: 1.8em;
 
 }
+/*-------------Eventpopup1*/
 .Event_popup1{
     display: none;
     width: 97%;
@@ -557,7 +558,6 @@ span:nth-of-type(27) {
     top: 1%;
     left: 1%;
     background-color: rgba(53, 53, 53, 0.9);
-    border: 1px red solid;
 
 }
 .Event_popup1Layer{
@@ -572,7 +572,16 @@ span:nth-of-type(27) {
     left: 30%;
     background-color: rgba(53, 53, 53, 1);
 }
-.Event_popup1Layer>div:nth-child(1) {
+.Event_popup1Layer>form {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.Event_popup1Layer>form>div:nth-child(1) {
+    overflow-y: scroll;
     width: 90%;
     height: 70%;
     border: #333 1px solid;
@@ -585,7 +594,7 @@ span:nth-of-type(27) {
 .Event_popup1LayerTop {
     position: relative;
     width: 100%;
-    height: 20%;
+    height: auto;
     /* border: red solid 1px; */
     font-family: 'Kanginhan';
     font-size: 2em;
@@ -662,12 +671,12 @@ span:nth-of-type(27) {
     opacity: calc(50%);
     z-index: -1;
 }
-.Event_popup1Layer>div:nth-child(2) {
+.Event_popup1Layer>form>div:nth-child(2) {
     width: 50%;
     height: 10%;
     text-align: center;
 }
-.Event_popup1Layer>div:nth-child(2)>button {
+.Event_popup1_sub {
     width: 90%;
     height: 90%;
     font-weight: bold;
@@ -675,7 +684,7 @@ span:nth-of-type(27) {
     background-color: rgb(167, 154, 137);
     border-radius: 25px;
 }
-.Event_popup1Layer>div:nth-child(2)>button:active {
+.Event_popup1_sub:active {
     background-color: rgb(240, 240, 104);
 }
 .Event_popup1_Close{
@@ -701,14 +710,7 @@ span:nth-of-type(27) {
 .Event_popup1_Close>span:nth-child(2) {
     transform: rotate( -45deg ) translate( -5% , 200% );
 }
-/* .Event_popup1Layer::after{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border: 1px rgb(84, 50, 205) solid;
-
-    content: "";
-} */
+/*-------------Eventpopup2*/
 .Event_popup2{
     display: none;
     width: 97%;
@@ -718,7 +720,7 @@ span:nth-of-type(27) {
     top: 1%;
     left: 1%;
     background-color: rgba(53, 53, 53, 0.9);
-    border: 1px red solid;
+
 }
 .Event_popup2Layer{
     width: 40%;
@@ -732,7 +734,15 @@ span:nth-of-type(27) {
     left: 30%;
     background-color: rgba(53, 53, 53, 1);
 }
-.Event_popup2Layer>div:nth-child(1) {
+.Event_popup2Layer>form {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.Event_popup2Layer>form>div:nth-child(1) {
     width: 90%;
     height: 70%;
     overflow-y: scroll;
@@ -747,22 +757,24 @@ span:nth-of-type(27) {
 }
 .Event_popup2LayerTop {
     width: 100%;
-    height: 20%;
+    height: 55px;
     font-family: 'Kanginhan';
     font-size: 2em;
     font-weight: bold;
     text-align: center;   
-    z-index: 10;
+    z-index: 5;
+} 
+.Event_popup2LayerTop>p{
+    margin: 0;
 }
 .Event_popup2Select {
     width: 90%;
-    height: 80%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 4px double rgb(128, 115, 115);
-    /* background-color: rgb(128, 115, 115); */
     padding: 2% 0;
 }
 .Event_popup2Select>div {
@@ -784,11 +796,31 @@ span:nth-of-type(27) {
     border: transparent 1px solid;
     background-color: transparent;
 }
-
-.codeImgSelect:hover {
-
+select{
+    border-radius: 5px;
+    background-color: rgb(241, 241, 241);
+    
 }
-
+select:hover{
+    border: 1px double rgb(128, 115, 115);
+    background-color: rgb(240, 240, 104);
+}
+.Event_popup2Select>div>input{
+    border-radius: 5px;
+    border: 1px transparent solid;
+}
+.Event_popup2Select>div>input:hover{
+    border: 1px double rgb(128, 115, 115);
+    background-color: rgb(240, 240, 104);
+}
+.Event_popup2Select>div>button{
+    border-radius: 5px;
+    border: 1px transparent solid;
+}
+.Event_popup2Select>div>button:hover{
+    border: 1px double rgb(128, 115, 115);
+    background-color: rgb(240, 240, 104);
+}
 .Event_popup2Input {
     width: 100%;
     height: auto;
@@ -831,7 +863,6 @@ span:nth-of-type(27) {
 }
 
 .Event_popup2bottom {
-    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -840,22 +871,13 @@ span:nth-of-type(27) {
     height: 10%;
     z-index: 10;
 }
-.Event_popup2bottom::after {
-    position: absolute;
-    top: -1%;
-    width: 100%;
-    height: 100%;
-    content: "";
-    background-color: snow;
-    opacity: calc(50%);
-    z-index: -1;
-}
-.Event_popup2Layer>div:nth-child(2) {
+
+.Event_popup2Layer>form>div:nth-child(2) {
     width: 50%;
     height: 10%;
     text-align: center;
 }
-.Event_popup2Layer>div:nth-child(2)>button {
+.Event_popup2_sub {
     width: 90%;
     height: 90%;
     font-weight: bold;
@@ -863,7 +885,7 @@ span:nth-of-type(27) {
     background-color: rgb(167, 154, 137);
     border-radius: 25px;
 }
-.Event_popup2Layer>div:nth-child(2)>button:active {
+.Event_popup2_sub:active {
     background-color: rgb(240, 240, 104);
 }
 .Event_popup2_Close{
@@ -1009,11 +1031,15 @@ footer>div:nth-child(1)>a>img:hover {
     width: 90%;
     list-style: none;
 }
+
 .menu_listCh>ul>li>a{
-    width: 100%;
+    height: auto;
     font-size: 3em;
     color: snow;
     border: #fff 1px solid;
+}
+.menu_list>ul>li {
+
 }
 .menu_listCh>ul>li>a:hover{
     font-size: 2em;
@@ -1036,6 +1062,7 @@ footer>div:nth-child(1)>a>img:hover {
 @media all and (max-width:980px){
     body{
         overflow: scroll;
+        scrollbar-width: none;
     }
     .smokyWrap {
         background: black;
@@ -1076,7 +1103,6 @@ footer>div:nth-child(1)>a>img:hover {
         width: 60%;
         top: 15%;
         left: 20%;
-        overflow: scroll;
     }
     .Event_popup2Layer{
         width: 60%;
@@ -1122,7 +1148,8 @@ footer>div:nth-child(1)>a>img:hover {
         width: 90%;
     }
     .Event_popup1{
-        height: auto;
+        height: 100%;
+        width: 100%;
     }
     .Event_popup1Layer{
         width: 80%;
@@ -1137,6 +1164,7 @@ footer>div:nth-child(1)>a>img:hover {
     .Event_popup1_Close{
         width: 2em;
         height: 2em;
+        right: 15%;
     }
     .Event_popup1_Close>span {
         width: 2em;
@@ -1149,7 +1177,8 @@ footer>div:nth-child(1)>a>img:hover {
         transform: rotate( -45deg ) translate( -5% , 56% );
     }
     .Event_popup2{
-        height: auto;
+        height: 100%;
+        width: 100%;
     }
     .Event_popup2Layer{
         width: 80%;
@@ -1167,6 +1196,7 @@ footer>div:nth-child(1)>a>img:hover {
     .Event_popup2_Close{
         width: 2em;
         height: 2em;
+        right: 15%;
     }
     .Event_popup2_Close>span {
         width: 2em;
@@ -1177,5 +1207,14 @@ footer>div:nth-child(1)>a>img:hover {
     }
     .Event_popup2_Close>span:nth-child(2) {
         transform: rotate( -45deg ) translate( -5% , 56% );
+    }
+    .menu_listCh>ul>li>a{
+        font-size: 1.8em;
+        color: snow;
+        border: #fff 1px solid;
+    }
+    .menu_listCh>ul>li>a:hover{
+        font-size: 2em;
+        color: rgb(197, 194, 13);
     }
 }
