--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -234,7 +234,7 @@ a{
 		height: 206px;
 	}
 	.item4{
-		width: 250px;
+		width: 100%;
 		height: 206px;
 	}
 
@@ -397,7 +397,7 @@ a{
   .single-person-pool{
 	  background-color:#52d0e0;
 	  height: 206px;
-	  width: 320px;
+	  width: 100%;
 	}
   .pool0{fill:#52D0E0;}
   .pool1{fill:#3EA6C5;}
