--- a/movieWeb/css/stely_form.css
+++ b/movieWeb/css/stely_form.css
@@ -8,6 +8,7 @@ html,body{
 }
 a {
     text-decoration: none;
+    color: black;
 }
 .bgImg{
     position: fixed;
@@ -105,55 +106,70 @@ a {
     left:  9.5%;
     width: 80.5%;
     height: 81%;
-    /* width: 515px;
-    height: 678px; */
     border: 1px saddlebrown solid;
     overflow-y: scroll;
     overflow-x: hidden;
 }
 .wrap {
     width: 100%;
-    height: auto;
-    background-color: sandybrown;
+    /* height: 100%; */
+    background-color: white;
     display: flex;
     flex-direction: column;
 }
 /* index_from>header() 영역 */
 .header {
     width: 100%;
-    height: 18%;
+    height: 7rem;
     padding: 2%;
-    background-color: #1E2C5C;
+
 }
 /* >header(/header_form.php) 영역 */
 .popPage_top {
     width: 98%;
     height: 98%;
-    clear: both;
 }
 .popPage_top>div {
     width: 100%;
     height: auto;
-    float: left;
-    
 }
-.popPage_top>div:nth-child(1)>a>img {
-    width: 3rem;
-    height: 3rem;
-    
+.popPage_top_home {
+    right: 1%;
+}
+.popPage_top_home>a>img {
+    width: 2rem;
+    height: 2rem;
+}
+.popPage_top_logo {
+    left: 40%;
+    width: 7rem;    
+}
+.popPage_top_logo>img {
+    width: 7rem;    
 }
 /* index_from>section() 영역 */
 .section {
+    background-color: aqua;
     width: 100%;
-    height: 70%;
     padding: 2%;
+    content: "";
 }
 /* index_from>footer() 영역 */
 .footer {
+    background-color: #1E2C5C;
     width: 100%;
-    height: 10%;
     padding: 2%;
+    content: "";
 }
+/* ------index>menu(nav)---------------------------- */
+/* index>nav>header(stely_menu.css 별도로 관리) 영역 */
+/* .menuSlide {
+    right: 0;
+    width: 90%;
+    height: auto;
+    position: absolute;
+    display: none;
+} */
 
 
 
@@ -164,6 +180,20 @@ a {
         width: 38%;
         left: 28%;
     }
+    .menuSection_un {
+        height: 7rem;
+    }
+    .menuSection_center>div>ul>div>li>a {
+        justify-content:start;
+        
+    }
+    .menuS_t_quickList>a>div {
+        font-size: smaller;
+    }
+    .menuSection_center>div>ul>div>li>a {
+        font-size: smaller;
+    }
+
 }
 @media all and (max-width:1580px) {
     .bg_macbook {
@@ -230,7 +260,7 @@ a {
 }
 @media all and (max-width:680px) {
     html,body{
-    overflow: hidden;
+        overflow: hidden;
     }
     .bg_macbook {
         width: 100%;
@@ -244,6 +274,5 @@ a {
         width: 99%;
         height: 90%;
     }
-}
 
-/* login.php */
+}
