--- a/movieWeb/css/stely_form.css
+++ b/movieWeb/css/stely_form.css
@@ -10,6 +10,9 @@ a {
     text-decoration: none;
     color: black;
 }
+li {
+    list-style: none;
+}
 .bgImg{
     position: fixed;
     top: 40%;
@@ -118,49 +121,52 @@ a {
     flex-direction: column;
 }
 /* index_from>header() 영역 */
-.header {
+.pop_header {
     width: 100%;
     height: 7rem;
     padding: 2%;
-
+    margin-bottom: 2rem;
 }
 /* >header(/header_form.php) 영역 */
-.popPage_top {
+.pop_header_wrap {
     width: 98%;
     height: 98%;
 }
-.popPage_top>div {
+.pop_header_wrap>div {
     width: 100%;
     height: auto;
+    clear: both;
 }
-.popPage_top_home {
-    right: 1%;
+.pop_header_home>a {
+    float: right;
+    padding: 2%;
 }
-.popPage_top_home>a>img {
+.pop_header_home>a>img {
     width: 2rem;
     height: 2rem;
 }
-.popPage_top_logo {
-    left: 40%;
-    width: 7rem;    
+.pop_header_logo>div {
+    margin-left: 45%;
 }
-.popPage_top_logo>img {
-    width: 7rem;    
+
+.op_header_logo>div>img {
+    width: 5rem;    
 }
 /* index_from>section() 영역 */
-.section {
+.pop_section {
     background-color: aqua;
     width: 100%;
     padding: 2%;
     content: "";
 }
 /* index_from>footer() 영역 */
-.footer {
+.pop_footer {
     background-color: #1E2C5C;
     width: 100%;
     padding: 2%;
     content: "";
 }
+
 /* ------index>menu(nav)---------------------------- */
 /* index>nav>header(stely_menu.css 별도로 관리) 영역 */
 /* .menuSlide {
@@ -180,18 +186,11 @@ a {
         width: 38%;
         left: 28%;
     }
-    .menuSection_un {
-        height: 7rem;
-    }
-    .menuSection_center>div>ul>div>li>a {
-        justify-content:start;
-        
-    }
-    .menuS_t_quickList>a>div {
-        font-size: smaller;
-    }
-    .menuSection_center>div>ul>div>li>a {
-        font-size: smaller;
+
+    /* >header(/header_form.php) 영역 */
+    /* 로고영역 배열 비율 변경 */
+    .popPage_top_logo>div {
+        margin-left: 42%;
     }
 
 }
@@ -274,5 +273,6 @@ a {
         width: 99%;
         height: 90%;
     }
+
 
 }
