--- a/movieWeb/css/stely_index.css
+++ b/movieWeb/css/stely_index.css
@@ -453,7 +453,86 @@ a {
     padding: 2%;
     color: white;
 }
+/* index_from>footer() 영역 */
+/* >footer(/footer.php) 영역 */
+.pop_footer {
+    background-color: gray;
+    width: 96%;
+    height: auto;
+    padding: 2%;
+    content: "";
+}
+.pop_footer>div {
+    padding: 2% 4%;
+    width: 94%;
+}
+.pop_footer_top {
+    display: flex;
+    flex-direction: row;
+}
+.pop_footer_top>p {
+    color: white;
+}
+.footerBtn {
+    content: "";
+    height: 3rem;
+    width: 3rem;
+    /* footerBtn_Ch 클릭시 변화 (회전)
+    transform: rotate( 0deg ) translate( 0% , 20% ); */
+    
+    transform: rotate( -180deg ) translate( -25% , 10% );
+}
 
+.footerBtn_Ch {
+    content: "";
+    position: relative;
+    width: 1.5rem;
+    height: 0.4rem;
+    background-color: white;
+    border: 1px solid transparent;
+    border-radius: 25px;
+    transform: rotate( -45deg ) translate( -13% , 170% );
+
+}
+.footerBtn_Ch::after {
+    content: "";
+    position: absolute;
+    width: 1.5rem;
+    height: 0.4rem;
+    background-color: white;
+    border: 1px solid transparent;
+    border-radius: 25px;
+    transform: rotate( -90deg ) translate( -30% , 100% );
+}
+.pop_footer_center {
+    color: white;
+    display: none;
+}
+.pop_footer_center>ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-inline-start: 0%;
+    color: white;
+}
+.pop_footer_center>ul>li>a {
+    color: white;
+}
+.pop_footer_bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.pop_footer_bottom>ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-inline-start: 0%;
+    color: white;
+}
+.pop_footer_bottom>ul>li>a {
+    color: white;
+}
 
 
 
@@ -553,11 +632,11 @@ a {
     }
     .screen {
         top: 5%;
-        left: 0%;
-        width: 99%;
-        height: 90%;
+        left: 2%;
+        width: 96%;
+        height: 85%;
     }
-        /* >nav(/header_menu.php) 영역 */
+    /* >nav(/header_menu.php) 영역 */
     /* 로그인 영역 사이즈 변경 */
     .menuPage_login {
         top: 12%;
@@ -577,6 +656,23 @@ a {
     /* SNS계정 아이콘 사이즈 변경 */
     .menuSection_b_snsicon {
         width: 2rem;
+    }
+    /* index_from>header() 영역 */
+    /* 상단헤더바 폭 변경 */
+    .pop_header {
+        width: 95%;
+    }
+    /* index_from>section() 영역 */
+    .pop_section {
+        margin-top: 8%;
+    }
+    /* index_from>footer() 영역 */
+    /* >footer(/footer_form.php) 영역 */
+    .pop_footer_center>ul>li {
+        font-size: small;
+    }
+    .pop_footer_bottom>ul>li>a {
+        font-size: small;
     }
 
 }
