--- a/movieWeb/css/stely_form.css
+++ b/movieWeb/css/stely_form.css
@@ -20,6 +20,7 @@ li {
     right: 12%;
     width: 6rem;
     height: 25%;
+    
 }
 .bgImg_scroll {
     width: 100%;
@@ -257,7 +258,7 @@ li {
     padding: 4%;
 }
 .pop_section_main>article {
-    border: 1px solid blue;
+    border: 1px solid #1E2C5C;
     width: 92%;
     padding: 2% 4% 4% 4%;
     text-align: center;
@@ -266,11 +267,61 @@ li {
     font-size: x-large;
 }
 .pop_section_main>article>div {
-    border: 1px solid blue;
+    border: 1px solid #1E2C5C;
     width: 92%;
     padding: 4%;   
 }
+/* form부분 */
+.form {
+    width: 96%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border: 1px solid transparent;
+    border-radius: 1px;
+    margin: 3% 2%;
+}
+.col1 {
+    font-size: larger;
+    letter-spacing: 0.1rem;
+    /* background-color: aquamarine; */
+    padding: 1% 1%;
+    width: 35%;
+}
 
+.col2 {
+    font-size: larger;
+    /* background-color: orange; */
+    padding: 1% 1%;
+    width: 55%;
+}
+.col2>input {
+    width: 90%;
+    height: 1.5rem;
+    border: transparent;
+}
+.bottom_line {
+    width: 96%;
+    margin: 10% 2% 15% 2%;
+}
+.textBtns {
+    width: 100%;
+    padding: 3% 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.imgBtns {
+    width: 100%;
+    padding: 3% 3%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
 /* index_from>footer() 영역 */
 /* >footer(/footer.php) 영역 */
 .footer {
